--- a/Uranium/Uranium.vcxproj
+++ b/Uranium/Uranium.vcxproj
@@ -129,6 +129,7 @@
     </ClCompile>
     <ClCompile Include="src\Uranium\Core\Application.cpp" />
     <ClCompile Include="src\Uranium\Core\Context.cpp" />
+    <ClCompile Include="src\Uranium\Graphics\Display\Window.cpp" />
     <ClCompile Include="src\Vendor\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -207,6 +208,9 @@
     <ClInclude Include="src\Uranium\Core\Context.h" />
     <ClInclude Include="src\Uranium\Core\EngineTools.h" />
     <ClInclude Include="src\Uranium\Core\EntryPoint.h" />
+    <ClInclude Include="src\Uranium\Graphics\Display\Window.h" />
+    <ClInclude Include="src\Uranium\utils\Dimension.h" />
+    <ClInclude Include="src\Uranium\utils\Position.h" />
     <ClInclude Include="src\Vendor\stb_image.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
