Monitor implementation in half

--- a/Uranium/Uranium.vcxproj
+++ b/Uranium/Uranium.vcxproj
@@ -128,7 +128,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\Uranium\Core\Application.cpp" />
-    <ClCompile Include="src\Uranium\Core\Context.cpp" />
+    <ClCompile Include="src\Uranium\Core\WorkingUnit.cpp" />
+    <ClCompile Include="src\Uranium\Graphics\Display\Monitor.cpp" />
     <ClCompile Include="src\Uranium\Graphics\Display\Window.cpp" />
     <ClCompile Include="src\Vendor\stb_image.cpp" />
   </ItemGroup>
@@ -205,10 +206,14 @@
     <ClInclude Include="src\STL_pch.h" />
     <ClInclude Include="src\Uranium.h" />
     <ClInclude Include="src\Uranium\Core\Application.h" />
-    <ClInclude Include="src\Uranium\Core\Context.h" />
+    <ClInclude Include="src\Uranium\Core\WorkingUnit.h" />
     <ClInclude Include="src\Uranium\Core\EngineTools.h" />
     <ClInclude Include="src\Uranium\Core\EntryPoint.h" />
+    <ClInclude Include="src\Uranium\Graphics\Display\Monitor.h" />
     <ClInclude Include="src\Uranium\Graphics\Display\Window.h" />
+    <ClInclude Include="src\Uranium\Graphics\Display\WindowHint.h" />
+    <ClInclude Include="src\Uranium\Graphics\Display\WindowMode.h" />
+    <ClInclude Include="src\Uranium\Graphics\Display\WindowProps.h" />
     <ClInclude Include="src\Uranium\utils\Dimension.h" />
     <ClInclude Include="src\Uranium\utils\Position.h" />
     <ClInclude Include="src\Vendor\stb_image.h" />
