--- a/Uranium/Uranium.vcxproj.filters
+++ b/Uranium/Uranium.vcxproj.filters
@@ -123,10 +123,13 @@
     <ClCompile Include="src\Uranium\Core\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Uranium\Core\Context.cpp">
+    <ClCompile Include="src\Uranium\Core\WorkingUnit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Uranium\Graphics\Display\Window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Uranium\Graphics\Display\Monitor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -356,7 +359,7 @@
     <ClInclude Include="src\Uranium\Core\EngineTools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Uranium\Core\Context.h">
+    <ClInclude Include="src\Uranium\Core\WorkingUnit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Uranium\Graphics\Display\Window.h">
@@ -366,6 +369,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Uranium\utils\Position.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Uranium\Graphics\Display\WindowProps.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Uranium\Graphics\Display\WindowHint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Uranium\Graphics\Display\WindowMode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Uranium\Graphics\Display\Monitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
