--- a/Uranium/Uranium.vcxproj
+++ b/Uranium/Uranium.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="src\Uranium\Core\WorkingUnit.cpp" />
     <ClCompile Include="src\Uranium\Graphics\Display\Monitor.cpp" />
     <ClCompile Include="src\Uranium\Graphics\Display\Window.cpp" />
+    <ClCompile Include="src\Uranium\Graphics\Display\WindowProps.cpp" />
     <ClCompile Include="src\Vendor\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -205,13 +206,13 @@
     <ClInclude Include="src\Scenes\SceneMaster.h" />
     <ClInclude Include="src\STL_pch.h" />
     <ClInclude Include="src\Uranium.h" />
+    <ClInclude Include="src\Uranium\Callbacks\WindowCallback.h" />
     <ClInclude Include="src\Uranium\Core\Application.h" />
     <ClInclude Include="src\Uranium\Core\WorkingUnit.h" />
     <ClInclude Include="src\Uranium\Core\EngineTools.h" />
     <ClInclude Include="src\Uranium\Core\EntryPoint.h" />
     <ClInclude Include="src\Uranium\Graphics\Display\Monitor.h" />
     <ClInclude Include="src\Uranium\Graphics\Display\Window.h" />
-    <ClInclude Include="src\Uranium\Graphics\Display\WindowHint.h" />
     <ClInclude Include="src\Uranium\Graphics\Display\WindowMode.h" />
     <ClInclude Include="src\Uranium\Graphics\Display\WindowProps.h" />
     <ClInclude Include="src\Uranium\utils\Dimension.h" />
