--- a/Uranium/Uranium.vcxproj
+++ b/Uranium/Uranium.vcxproj
@@ -90,6 +90,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Core\Application.cppm" />
+    <ClCompile Include="src\Core\Application.ixx" />
+    <ClCompile Include="src\Core\Context.cpp" />
+    <ClCompile Include="src\Core\Context.ixx" />
+    <ClCompile Include="src\Core\EntryPoint.cpp" />
     <ClCompile Include="src\Input\Callbacks\WindowCallback.cpp" />
     <ClCompile Include="src\Math\mat2.cpp" />
     <ClCompile Include="src\Math\mat3.cpp" />
@@ -123,7 +128,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\Input\Callbacks\MonitorCallback.cpp" />
-    <ClCompile Include="src\Core\Application.cpp" />
     <ClCompile Include="src\Core\UnitProgram.cpp" />
     <ClCompile Include="src\Graphics\Display\Monitor.cpp" />
     <ClCompile Include="src\Graphics\Display\Window.cpp" />
@@ -198,10 +202,8 @@
     <ClInclude Include="src\STL_pch.h" />
     <ClInclude Include="src\Uranium.h" />
     <ClInclude Include="src\Input\Callbacks\MonitorCallback.h" />
-    <ClInclude Include="src\Core\Application.h" />
     <ClInclude Include="src\Core\UnitProgram.h" />
     <ClInclude Include="src\Core\EngineTools.h" />
-    <ClInclude Include="src\Core\EntryPoint.h" />
     <ClInclude Include="src\Graphics\Display\Monitor.h" />
     <ClInclude Include="src\Graphics\Display\Window.h" />
     <ClInclude Include="src\Graphics\Display\WindowMode.h" />
