--- a/Uranium/Uranium.vcxproj
+++ b/Uranium/Uranium.vcxproj
@@ -90,12 +90,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Core\Application.cppm" />
-    <ClCompile Include="src\Core\Application.ixx" />
-    <ClCompile Include="src\Core\Context.cpp" />
-    <ClCompile Include="src\Core\Context.ixx" />
-    <ClCompile Include="src\Core\EntryPoint.cpp" />
-    <ClCompile Include="src\Core\IApplication.ixx" />
+    <ClCompile Include="src\Program\Application.cpp" />
+    <ClCompile Include="src\Program\Application.ixx" />
+    <ClCompile Include="src\Program\Context.cpp" />
+    <ClCompile Include="src\Program\Context.ixx" />
+    <ClCompile Include="src\Program\EntryPoint.cpp" />
     <ClCompile Include="src\STL_pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
